// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NameExpressionGenIdBanner with existing data 1`] = `
<div
  className="genid-alert alert alert-info"
  role="alert"
>
  Current genId: 
  124
  <button
    className="pull-right alert-button edit-genid-btn btn btn-info"
    onClick={[Function]}
    type="button"
  >
    Edit genId
  </button>
</div>
`;

exports[`NameExpressionGenIdBanner without existing data, genId = 1 (0) 1`] = `
<div
  className="genid-alert alert alert-info"
  role="alert"
>
  Current genId: 
  1
  <button
    className="pull-right alert-button edit-genid-btn btn btn-info"
    onClick={[Function]}
    type="button"
  >
    Edit genId
  </button>
</div>
`;

exports[`NameExpressionGenIdBanner without existing data, genId > 1 1`] = `
<div
  className="genid-alert alert alert-info"
  role="alert"
>
  Current genId: 
  124
  <button
    className="pull-right alert-button edit-genid-btn btn btn-info"
    onClick={[Function]}
    type="button"
  >
    Edit genId
  </button>
  <button
    className="pull-right alert-button reset-genid-btn btn btn-info"
    onClick={[Function]}
    type="button"
  >
    Reset genId
  </button>
</div>
`;
